--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,6 +116,8 @@
     <string name="same_layer_name">There is already a layer with the same name</string>
     <string name="default_field_name">Description</string>
     <string name="pref_sync_notification">Show sync notification</string>
+    <string name="alert_sync_turned_off">Syncing is turned off in your system settings and currently not possible. Turn back on?</string>
+    <string name="alert_sync_title">Sync:</string>
     <string name="tap_to_measure">Tap on map to check points</string>
     <string name="permissions">Permissions</string>
     <string name="requested_permissions">Application needs some permissions to work properly. It includes writing to external storage (to save data on card),
