promt move to recources

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -167,4 +167,8 @@
     <string name="other">Другое</string>
     <string name="extended_logs">Логирование</string>
     <string name="share_log">Отправить лог</string>
+
+    <string name="choose_object">Выберите объект:</string>
+
+
 </resources>
