--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -169,6 +169,9 @@
     <string name="share_log">Отправить лог</string>
 
     <string name="choose_object">Выберите объект:</string>
+    <string name="push_perm_title">Уведомления</string>
+    <string name="push_perm_text">Уведомления отключены системой, для их включения зайдите в настройки, найдите приложение и включите уведомления</string>
+    <string name="push_perm_why_text">Для получения уведомлений нужно дать разрешения</string>
 
 
 </resources>
