--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,7 +157,7 @@
     <string name="intro_more">Get more:</string>
     <string name="intro_free">Your app version is free</string>
     <string name="intro_get_pro">Get NextGIS Mobile Pro</string>
-    <string name="track_uid">Your UID is: %1$s</string>
+    <string name="track_uid">Your UID</string>
     <string name="track_send">Send location to server</string>
     <string name="preferred_units">Measurement system</string>
     <string name="show_zoom_level">Show zoom level</string>
@@ -173,6 +173,9 @@
     <string name="push_perm_title">Notifications</string>
     <string name="push_perm_text">Notifications are disabled by the system, to enable them go to settings, find the application and enable notifications</string>
     <string name="push_perm_why_text">To receive notifications you need to give permissions</string>
+
+    <string name="copied">Text copied to clipboard</string>
+
 
 
 </resources>
