--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,8 +120,12 @@
     <string name="alert_sync_title">Sync:</string>
     <string name="tap_to_measure">Tap on map to check points</string>
     <string name="permissions">Permissions</string>
-    <string name="requested_permissions">Application needs some permissions to work properly. It includes writing to external storage (to save data on card),
-        access to location services and getting contacts (to create and manage web accounts).</string>
+
+    <string name="location_permissions">NextGIS Mobile requires location permission to show your location on the map.</string>
+    <string name="account_permissions">NextGIS Mobile needs access to contacts to create and manage Web GIS Accounts further used for syncronization purposes.</string>
+    <string name="memory_permissions">NextGIS Mobile uses media files access to create attachments (like photos) to map features.</string>
+    <string name="push_permissions">NextGIS Mobile uses notifications to inform about data syncing data activities.</string>
+
     <string name="action_support">Support</string>
     <string name="app_support">Please send us questions, bug-reports and new features suggestions. Commercial support is available.</string>
     <string name="email">Email</string>
