--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -44,8 +44,8 @@
     <string name="credits_intro">Credits</string> 
     <string name="credits">Einige Icons, die in dieser App verwendet werden sind von <a href="http://icons8.com/android-icons">Icons8.com</a> lizenziert unter <a href="http://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0 license</a>, <a href="http://materialdesignicons.com/">materialdesignicons.com</a> und <a href="http://romannurik.github.io/AndroidAssetStudio/icons-launcher.html">romannurik.github.io</a> lizenziert unter <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0 license</a></string>
 
-    <string name="contacts"><a href="http://nextgis.ru/en/contact/">Kontaktiere uns</a></string>
-    <string name="action_about">Über</string> 
+    <string name="contacts"><a href="https://nextgis.com/contact/">Kontaktiere uns</a></string>
+    <string name="action_about">Über</string>
     <string name="add_current_place">Standort hinzufügen</string> 
     <string name="add_new_geometry">Neue Geometrie hinzufügen</string> 
     <string name="add_geometry_by_walk">Neue Geometrie durch Laufen hinzufügen</string>  
@@ -123,11 +123,9 @@
     <string name="email">Email</string>
     <string name="email_src">info@nextgis.com</string>
     <string name="telegram">Telegram</string>
-    <string name="telegram_src">\@nextgis_support</string>
     <string name="github">Github</string>
     <string name="github_src">http://github.com/nextgis/android_gisapp/issues</string>
     <string name="web">Website</string>
-    <string name="web_src">http://nextgis.com/nextgis-mobile</string>
     <string name="not_installed">Application not installed</string>
     <string name="action_help">Help</string>
     <string name="location_distance_to">Distance to (m)</string>
