--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,8 +44,8 @@
     <string name="app_description">Mobile GIS application for spatial field data collection and sending it back to server. NextGIS Mobile also records tracks and sends position information to web server.</string>
     <string name="credits_intro">Credits</string>
     <string name="credits">Some icons used in the application are from <a href="http://icons8.com/android-icons">Icons8.com</a> licensed under a <a href="http://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0 license</a>, <a href="http://materialdesignicons.com/">materialdesignicons.com</a> and <a href="http://romannurik.github.io/AndroidAssetStudio/icons-launcher.html">romannurik.github.io</a> licensed under a <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0 license</a></string>
-    <string name="copyright" translatable="false"><![CDATA[© <a href=\"https://nextgis.com\">NextGIS</a>, 2012–2022]]></string>
-    <string name="contacts"><a href="http://nextgis.ru/en/contact/">Contact us</a></string>
+    <string name="copyright" translatable="false"><![CDATA[© <a href=\"https://nextgis.com\">NextGIS</a>, 2012–%s]]></string>
+    <string name="contacts"><a href="https://nextgis.com/contact/">Contact us</a></string>
     <string name="action_about">About</string>
     <string name="add_current_place">Add current place</string>
     <string name="add_new_geometry">Add new geometry</string>
@@ -129,13 +129,15 @@
     <string name="action_support">Support</string>
     <string name="app_support">Please send us questions, bug-reports and new features suggestions. Commercial support is available.</string>
     <string name="email">Email</string>
-    <string name="email_src">info@nextgis.com</string>
+    <string name="support">Support:</string>
+    <string name="email_src">support@nextgis.com</string>
     <string name="telegram">Telegram</string>
-    <string name="telegram_src">\@nextgis_support</string>
+    <string name="telegram_src">\@nextgis_talks</string>
+    <string name="telegram_prompt">nextgis_talks</string>
     <string name="github">Github</string>
     <string name="github_src">http://github.com/nextgis/android_gisapp/issues</string>
     <string name="web">Website</string>
-    <string name="web_src">http://nextgis.com/nextgis-mobile</string>
+    <string name="web_src">https://nextgis.com/nextgis-mobile</string>
     <string name="not_installed">Application not installed</string>
     <string name="action_help">Help</string>
     <string name="location_distance_to">Distance to (m)</string>
