web image download added. Version 2.9.1

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -180,5 +180,11 @@
 
     <string name="copied">Текст скопирован в буфер обмена</string>
 
+    <string name="web_src">https://nextgis.ru/nextgis-mobile</string>
+    <string name="copyright" translatable="false"><![CDATA[© <a href=\"https://nextgis.ru\">NextGIS</a>, 2012–%s]]></string>
+    <string name="support">Поддержка</string>
+    <string name="manual">Документация</string>
+    <string name="manual_url">https://docs.nextgis.ru/docs_ngmobile/source/</string>
+
 
 </resources>
